naxa-backend-boilerplate/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: naxa-backend
  labels:
    name: naxa-backend
